Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-09-19 Kimmo
 PATCH: [ 1561001 ] Fix FileActionScript type in running actions
  Src: FileActionScript.cpp
 PATCH: [ 1561008 ] Warning fix for FileActionScript
  Src: DirDoc.cpp
 PATCH: [ 1561080 ] Cleanup for loglevel definition
  Src: DirDoc.cpp DirScan.cpp MainFrm.cpp Plugins.cpp StdAfx.cpp
  Src/Common: LogFile.cpp LogFile.h

2006-09-18 Kimmo
 Cleanup 64-bit ShellExtension projectfile, add a debug target
  ShellExtension: ShellExtensionX64.vcproj

2006-09-16 Kimmo
 PATCH: [ 1559619 ] 64-bit shellextension project file
  ShellExtension new files: ShellExtensionX64.def ShellExtensionX64.vcproj
 Remove unused variable
  Src/editlib: memcombo.cpp
 Remove unused variable
  Src: OpenDlg.cpp
 Fix typecasting warnings
  Src: locality.cpp locality.h MergeDoc.cpp
 Remove unused variable
  Src: FileActionScript.cpp
 Remove unused variable
  Src: FileFiltersDlg.cpp

2006-09-15 Kimmo
 BUG: [ 1558839 ] ShellExtension does not compile as 64-bit
  ShellExtension: WinMergeShell.cpp WinMergeShell.h
 PATCH: [ 1558893 ] Fix incompatible prototype in MessageBoxDialog
  Src/Common: MessageBoxDialog.cpp MessageBoxDialog.h
 PATCH: [ 1558913 ] Fix OnTimer prototypes (64-bit compatibility)
  Src: ChildFrm.cpp ChildFrm.h DircompProgressDlg.cpp DirCompProgressDlg.h DirView.cpp
   Dirview.h MainFrm.cpp MainFrm.h MergeEditview.cpp MergeEditView.h OpenDlg.cpp
   Opendlg.h Splash.cpp Splash.h
  Src/Common: MessageBoxDialog.cpp MessageBoxDialog.h
  Src/editlib: ccrystaltextview2.cpp ccrystaltextview.h 

2006-09-13 Kimmo
 BUG: [ 1547247 ] WinMerge ANSI target does not compile with VS2005
  Fix from Perry
  Src: Common/SuperComboBox.cpp
 PATCH: [ 1558152 ] Italian translation updated
  Submitted by Andrea Decorte
  Src/Languages/Italian: MergeItalian.rc

2006-09-12 Takashi
 PATCH: [ 1555764 ] prevent from shaking in view when pressing F5 down